BackEnd/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: na-groupe12
  name: backend-service
spec:
  selector:
    app: backend # Ce sélecteur fait référence à des pods, et non au déploiement. Il faut bien préciser le label attribué aux pods.
  ports:
    - protocol: TCP
      port:
        80 # Ici, il s'agit du port que ce service va EXPOSER pour rediriger le traffic vers le targetPort.
        # Il n'est pas obligatoire de spécifier le même port et targetPort.
      targetPort: 8000
